removed fracty temporarily until i find a fractions package that works with parcel..

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "core-js": "^3.29.1",
     "fractional": "^1.0.0",
-    "fracty": "^1.0.11",
+    "fractions-math": "^1.3.0",
+    "fracty": "^1.0.9",
     "regenerator-runtime": "^0.13.11"
   }
 }
